@@ -26,7 +26,7 @@ no_index:
     - t
     - xt
 requires:
-  Data::Image: 0
+  Data::Image: 0.03
   Mo: 0
   Mo::utils: 0.05
   perl: 5.8.0
