@@ -1,4 +1,5 @@
 0.06
+ - Move dt_created() to Data::Image.
  - Update README file.
 
 0.05 2022-10-16T18:31:53+02:00
